...
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                // Title
                Row(
                  children: [
                    Text(
                      _isEdit ? 'Chỉnh sửa sân' : 'Thêm sân mới',
                      style: GoogleFonts.sora(
                        fontSize: 18,
                        fontWeight: FontWeight.w700,
                        color: AppColors.neutral900,
                      ),
                    ),
...
                              ? const SizedBox(
                                  width: 18,
                                  height: 18,
                                  child: CircularProgressIndicator(
                                      strokeWidth: 2, color: Colors.white),
                                )
                              : Text(_isEdit ? 'Lưu thay đổi' : 'Tạo sân'),
                        ),
                      ),
                    ),
                  ],
                ),
              ],
...
